# data_profiler

./: .gitignore  main.py  mkdocs.yml  pyproject.toml
config/: column_keywords.yaml
docs/: getting_started.md  index.md
docs/API/: data_loader.md  exceptions.md  schema_generator.md  type_detector.md
src/data_profiler/: __init__.py  data_loader.py  data_profiler_exceptions.py  schema_generator.py  type_detector.py
src/data_profiler/context/: Enums.py  Models.py  __init__.py
src/data_profiler/dialects/: __init__.py  base.py  bigquery.py  oracle.py
src/data_profiler/steps/: __init__.py  base.py  boolean.py  categorical.py  date.py  numeric.py  text.py
tests/: test_data_loader.py  test_schema_generator.py  test_type_detector.py
